@@ -9,6 +9,10 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-33
+2022-06-14 Mikhail Dubrovin
+- src/GlobalUtils.py - add dict_of_object_metadata
+
 Tag: V02-00-32
 2022-06-09 Mikhail Dubrovin
 	modified:   src/GlobalUtils.py - use logger.debug instead of print
